--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		<dependency>
+   			<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-security</artifactId>
+    		<version>2.3.3.RELEASE</version>
+		</dependency>
 <!-- 		<dependency> -->
-<!-- 			<groupId>org.springframework.boot</groupId> -->
-<!-- 			<artifactId>spring-boot-starter-security</artifactId> -->
+<!--     		<groupId>org.springframework.security</groupId> -->
+<!--     		<artifactId>spring-security-crypto</artifactId> -->
 <!-- 		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
