--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/db
 spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.data-password=sa
+spring.datasource.data-username=
 spring.data.jpa.repositories.bootstrap-mode=default
